[package]
name = "realtime-rs"
version = "0.1.0"
edition = "2021"
description = "A rust implementation of the supabase realtime client library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
url = "2.4.0"